# Bank_System

./: CMakeLists.txt  README.md
include/: account.h  customer.h  database_operations.h  transaction.h
lib/: libmysqlcppconn8.so.2.8.2.0
src/: account.cpp  customer.cpp  database_operations.cpp  main.cpp  transaction.cpp
